--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .header_main {
   left: 0px;
   top: 0px;
