header style changed

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 .header_main {
   display: flex;
   align-items: center;
-  height: 55px;
-  background: linear-gradient(90deg, #672280 1.18%, #d3d3d3 100%);
+  height: 65px;
+  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
   color: white;
-  padding: 10px;
+  padding: 20px;
 }
 
 .header_main .header_image {
@@ -15,5 +15,4 @@
 .header_main .header_text {
   font-size: 1.25rem;
   margin-right: auto;
-  margin-left: 40%;
 }
