--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -1,70 +1,26 @@
-/* * {
-  box-sizing: border-box;
-} */
-
-body {
-  font-family: "Karla", sans-serif;
+* {
   margin: 0;
 }
 
 main {
   padding: 36px;
 }
-
 .header {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 65px;
-  background: linear-gradient(90deg, #2e3192 1.18%, #1bffff 100%);
   color: white;
-  padding: 0 20px;
-  width: 100%;
-  box-sizing: border-box;
+  background: linear-gradient(
+    109.6deg,
+    rgb(14, 11, 56) 11.2%,
+    rgb(239, 37, 37) 91.1%
+  );
+  height: 64px;
 }
-
 .header--title {
-  font-size: 1.25rem;
-  margin-left: 10px; /* Add a small margin on the left side */
+  font-size: 2rem;
 }
-
-@media (max-width: 600px) {
-  .header {
-    flex-direction: column;
-    height: auto;
-    padding: 10px;
-    text-align: center; /* Center align the text on mobile */
-  }
-
-  .header--title {
-    margin-top: 10px; /* Add margin to separate the title on mobile */
-  }
-}
-
-.form {
-  display: grid;
-  grid-template: 40px 40px / 1fr 1fr;
-  gap: 17px;
-  margin-bottom: 17px;
-}
-
-.form--input {
-  font-family: "Karla", sans-serif;
-  border-radius: 5px;
-  border: 1px solid #d5d4d8;
-  text-indent: 5px;
-}
-
-.form--button {
-  grid-column: 1 / -1;
-  font-family: "Karla", sans-serif;
-  border-radius: 5px;
-  background: linear-gradient(90deg, #2e3192 1.18%, #1bffff 100%);
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
 .meme {
   position: relative;
   text-align: center;
