--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -11,16 +11,54 @@ main {
   align-items: center;
   justify-content: center;
   color: white;
+  background: rgb(2, 0, 36);
   background: linear-gradient(
-    109.6deg,
-    rgb(14, 11, 56) 11.2%,
-    rgb(239, 37, 37) 91.1%
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
   );
   height: 64px;
 }
 .header--title {
   font-size: 2rem;
 }
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 3%;
+  margin-bottom: 5%;
+}
+.form .form-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.form .form-input input {
+  height: 25px;
+  width: 25%;
+  margin: 2%;
+}
+.form button {
+  width: 40%;
+  height: 35px;
+  border-top-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  color: white;
+  font-weight: 900;
+}
+
 .meme {
   position: relative;
   text-align: center;
