--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -94,3 +94,17 @@ main {
 .top {
   top: 0;
 }
+@media screen and (max-width: 768px) {
+  .form .form-input input {
+    height: 25px;
+    width: 35%;
+    margin: 2%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form .form-input input {
+    height: 25px;
+    width: 35%;
+    margin: 2%;
+  }
+}
