--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -105,6 +105,9 @@ main {
   .form .form-input input {
     height: 25px;
     width: 45%;
-    margin: 2%;
+    margin: 4%;
+  }
+  .form {
+    margin-bottom: 8%;
   }
 }
