--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -65,6 +65,8 @@ main {
 }
 
 .meme--image {
+  border: 3px solid;
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
   max-width: 100%;
   border-radius: 3px;
 }
@@ -112,5 +114,6 @@ main {
   }
   .form button {
     margin-top: 10%;
+    width: 50%;
   }
 }
